--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,64 @@
-<app-header></app-header>
-<main class="main-body">
-  <router-outlet></router-outlet>
-</main>
+<mat-toolbar class="header">
+  <button
+    mat-icon-button
+    class="mat-toggle"
+    *ngIf="userIsAuthenticated"
+    (click)="drawer.toggle()"
+  >
+    <mat-icon>menu</mat-icon>
+  </button>
+  <img class="logo-img" src="../../assets/logoOrg.PNG" alt="logo" />
+  <span>
+    <a class="logo-name" mat-button routerLink="/">Pic Hub</a>
+  </span>
+  <span class="spacer"></span>
+  <ul>
+    <li *ngIf="userIsAuthenticated">
+      <a mat-button routerLink="/posts/home" routerLinkActive="mat-accent"
+        >Home</a
+      >
+    </li>
+    <li *ngIf="userIsAuthenticated">
+      <a mat-button routerLink="/posts/create" routerLinkActive="mat-accent"
+        >New Post</a
+      >
+    </li>
+    <li *ngIf="!userIsAuthenticated">
+      <a mat-button routerLink="/auth/login" routerLinkActive="mat-accent"
+        >Login</a
+      >
+    </li>
+    <li *ngIf="!userIsAuthenticated">
+      <a mat-button routerLink="/auth/signup" routerLinkActive="mat-accent"
+        >Signup</a
+      >
+    </li>
+    <!-- <li *ngIf="userIsAuthenticated">
+      <button class="logout" mat-button (click)="onLogout()">Logout</button>
+    </li> -->
+    <li *ngIf="userIsAuthenticated">
+      <button
+        class="userName"
+        mat-raised-button="accent"
+        (click)="drawer.toggle()"
+      >
+        {{ userName }}
+      </button>
+    </li>
+  </ul>
+</mat-toolbar>
+
+<mat-sidenav-container class="example-container" autosize>
+  <mat-sidenav #drawer mode="over" class="example-sidenav" mode="side">
+    <app-header></app-header>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <div class="example-sidenav-content">
+      <main class="main-body">
+        <router-outlet></router-outlet>
+      </main>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
 <!-- <app-error *ngIf="hasError"></app-error> -->
