--- a/src/app/posts/my-profile/my-profile.component.css
+++ b/src/app/posts/my-profile/my-profile.component.css
@@ -4,11 +4,14 @@
 }
 .description {
   padding: 2% 1%;
+  padding-bottom: 10%;
 }
 
 .ui.active.modal {
   height: auto;
-  width: auto;
+  width: 50%;
+  margin-top: 5%;
+  margin-left: 5%;
 }
 .ui.modal > .content > .image {
   display: none;
@@ -20,4 +23,10 @@
 .ui.button.edit-avatar {
   position: absolute;
   background-color: transparent;
+}
+.ui.card.myProfile {
+  margin: 1rem auto !important;
+}
+.myProfile-img {
+  padding-bottom: 10%;
 }
