--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -36,6 +36,7 @@
 mat-sidenav-content {
   height: 90vh;
   background-color: rgb(62, 58, 58);
+  margin-left: unset;
 }
 
 /* For Headers */
@@ -90,4 +91,8 @@ button:hover {
 }
 .mat-toggle {
   color: white;
+}
+
+.mat-drawer-content.mat-sidenav-content {
+  margin-left: unset;
 }
