--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,36 +1,82 @@
-<mat-card class="margin-auto login-card animate__animated animate__flash">
+<div class="app-body">
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <form (submit)="onLogin(loginForm)" #loginForm="ngForm" *ngIf="!isLoading">
-    <mat-form-field>
-      <input
-        matInput
-        name="userName"
-        ngModel
-        type="text"
-        placeholder="User Name"
-        #userName="ngModel"
-        required
-      />
-      <mat-error *ngIf="userName.invalid"
-        >Please enter a valid User Name.</mat-error
-      >
-    </mat-form-field>
-    <mat-form-field>
-      <input
-        type="password"
-        name="password"
-        ngModel
-        matInput
-        placeholder="Password"
-        #passwordInput="ngModel"
-        required
-      />
-      <mat-error *ngIf="passwordInput.invalid"
-        >Please enter a valid password.</mat-error
-      >
-    </mat-form-field>
-    <button mat-raised-button color="accent" type="submit" *ngIf="!isLoading">
-      Login
-    </button>
-  </form>
-</mat-card>
+  <main class="main d-flex align-items-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 mx-auto animate__animated animate__flash">
+          <div class="card-group">
+            <div class="card p-4">
+              <div class="card-body">
+                <form
+                  (submit)="onLogin(loginForm)"
+                  #loginForm="ngForm"
+                  *ngIf="!isLoading"
+                >
+                  <h1>Login</h1>
+                  <p class="text-muted">Sign In to your account</p>
+                  <mat-form-field>
+                    <input
+                      matInput
+                      name="userName"
+                      ngModel
+                      type="text"
+                      placeholder="User Name"
+                      #userName="ngModel"
+                      required
+                    />
+                    <mat-error *ngIf="userName.invalid"
+                      >Please enter a valid User Name.</mat-error
+                    >
+                  </mat-form-field>
+                  <mat-form-field>
+                    <input
+                      type="password"
+                      name="password"
+                      ngModel
+                      matInput
+                      placeholder="Password"
+                      #passwordInput="ngModel"
+                      required
+                    />
+                    <mat-error *ngIf="passwordInput.invalid"
+                      >Please enter a valid password.</mat-error
+                    >
+                  </mat-form-field>
+                  <button
+                    mat-raised-button
+                    color="accent"
+                    type="submit"
+                    *ngIf="!isLoading"
+                  >
+                    Login
+                  </button>
+                </form>
+              </div>
+            </div>
+            <div
+              class="card text-white bg-danger py-5 d-md-down-none"
+              style="width: 44%;"
+            >
+              <div class="card-body text-center">
+                <div>
+                  <h2>Sign up</h2>
+                  <p>
+                    Do not have an account?
+                  </p>
+                  <p>Please click here to create new.</p>
+                  <button
+                    type="button"
+                    class="btn btn-light active mt-3"
+                    routerLink="/auth/signup"
+                  >
+                    Register Now!
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+</div>
